--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,26 +3,24 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Trigger this workflow on push to main branch
+      - main  # Trigger on push to main branch
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js (skip if not using Node.js)
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Replace GA Tracking ID
+        run: |
+          # Replace GA_TRACKING_ID placeholder in the HTML file with the secret
+          sed -i "s/GA_TRACKING_ID/${{ secrets.GA_TRACKING_ID }}/g" path_to_your_html_file.html
 
-    - name: Install dependencies (if using Node.js)
-      run: npm install  # Skip if not using Node.js
-
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        branch: gh-pages  # This is where the build will go (e.g., gh-pages branch)
-        folder: ./  # The folder to deploy, root folder in this case
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages  # The branch that will hold the deployed content
+          folder: ./  # Folder to deploy (use './' if deploying from the root folder)
+          token: ${{ secrets.DEPLOY_TOKEN }}  # Use the Personal Access Token here
