--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,3 +19,4 @@ jobs:
           branch: gh-pages  # The branch that will hold the deployed content
           folder: ./  # Folder to deploy (use './' if deploying from the root folder)
           token: ${{ secrets.DEPLOY_TOKEN }}  # Use the Personal Access Token here
+          options: '--exclude package-lock.json'  # Exclude package-lock.json from deployment
